[metadata]
name = nova-tempest-staging
summary = Nova Tempest tests
description-file =
    README.rst
author = Joe Hakim Rahme
author-email = jhakimra@redhat.com
home-page = https://git.openstack.org/openstack/nova-tempest-staging
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    nova_tempest_staging

[entry_points]
tempest.test_plugins =
    nova-tempest-staging = nova_tempest_staging.plugin:NovaTempestStaging
