[metadata]
name = tempest-whitebox-plugin
summary = Tempest Whitebox Plugin
description-file =
    README.rst
author = Joe Hakim Rahme
author-email = jhakimra@redhat.com
home-page = https://git.openstack.org/openstack/tempest-whitebox-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tempest_whitebox_plugin

[entry_points]
tempest.test_plugins =
    tempest-whitebox-plugin = tempest_whitebox_plugin.plugin:TempestWhiteboxPlugin
